# Divvy-analysis

./: Divvy-EDA.ipynb  Divvy-data-wrangling.ipynb  Divvy-preprocessing-and-training.ipynb  LICENSE  Makefile  README.md  pyproject.toml
