[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "divvy_trip_analysis"
version = "0.0.1"
description = "We perform EDA to look for patterns in the usage of Chicago's bicycle and scooter system, Divvy, and train models to predict variables such as the demand at a given station."
authors = [
  { name = "Ashley Toth" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.7"


[tool.ruff]
line-length = 99
src = ["divvy_trip_analysis"]
include = ["pyproject.toml", "divvy_trip_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["divvy_trip_analysis"]
force-sort-within-sections = true

